--- a/sandbox.html
+++ b/sandbox.html
@@ -10,6 +10,10 @@
     <div id="playArea">
       <div id="player"></div>
     </div>
+    <div>
+      <textarea id="playerCode" rows="10" cols="20"></textarea><br>
+      <button id="evalButton" onclick="evalPlayerCode()">Evaluate</button>
+    </div>
     <script src="js/sandbox.js"></script>
   </body>
 </html>
